<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/team"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="5"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/suffix"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/suffix"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:hint="@string/suffix"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters"
            android:maxLength="1"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/match"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/team"
            app:layout_constraintTop_toTopOf="@+id/team" />

        <EditText
            android:id="@+id/match"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/match"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/suffix"
            app:layout_constraintTop_toTopOf="@+id/suffix" />

        <Button
            android:id="@+id/noshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="onNoShow"
            android:text="@string/no_show"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/team"
            app:layout_constraintTop_toBottomOf="@+id/team" />

        <Button
            android:id="@+id/confNoshow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="confNoShow"
            android:text="@string/confirm"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/noshow"
            app:layout_constraintTop_toTopOf="@+id/noshow" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/match" />

        <EditText
            android:id="@+id/locationSetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="16"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/locationConf"
            app:layout_constraintTop_toBottomOf="@+id/match" />

        <Button
            android:id="@+id/locationConf"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:onClick="updateLocation"
            android:text="@string/set"
            android:textSize="30sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/locationSetter" />

        <CheckBox
            android:id="@+id/supTub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/tub_supported"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/noshow"
            app:layout_constraintTop_toBottomOf="@id/noshow" />

        <Button
            android:id="@+id/collBunnyInc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="crement"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/supTub"
            app:layout_constraintTop_toBottomOf="@+id/supTub" />

        <Button
            android:id="@+id/collBunnyDec"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="crement"
            android:text="@string/minus"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/collBunnyInc"
            app:layout_constraintTop_toTopOf="@+id/collBunnyInc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/bunnies_collected"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/collBunnyDec"
            app:layout_constraintStart_toEndOf="@+id/collBunnyDec"
            app:layout_constraintTop_toTopOf="@+id/collBunnyDec" />

        <Button
            android:id="@+id/touchTubInc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="crement"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/collBunnyInc"
            app:layout_constraintTop_toBottomOf="@+id/collBunnyInc" />

        <Button
            android:id="@+id/touchTubDec"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="crement"
            android:text="@string/minus"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/touchTubInc"
            app:layout_constraintTop_toTopOf="@+id/touchTubInc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tubs_touched"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/touchTubDec"
            app:layout_constraintStart_toEndOf="@+id/touchTubDec"
            app:layout_constraintTop_toTopOf="@+id/touchTubDec" />

        <CheckBox
            android:id="@+id/spoiledBunny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:text="@string/bunny_spoiled"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/touchTubInc"
            app:layout_constraintTop_toBottomOf="@+id/touchTubInc" />

        <Button
            android:id="@+id/collCubeInc"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="crement"
            android:text="@string/zero"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/spoiledBunny"
            app:layout_constraintTop_toBottomOf="@+id/spoiledBunny" />

        <Button
            android:id="@+id/collCubeDec"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:onClick="crement"
            android:text="@string/minus"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/collCubeInc"
            app:layout_constraintTop_toTopOf="@+id/collCubeInc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/cubes_collected"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/collCubeDec"
            app:layout_constraintStart_toEndOf="@+id/collCubeDec"
            app:layout_constraintTop_toTopOf="@+id/collCubeDec" />

        <TextView
            android:id="@+id/penaltyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/penalty_card"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/collCubeInc"
            app:layout_constraintTop_toBottomOf="@+id/collCubeInc" />

        <RadioGroup
            android:id="@+id/penalty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checkedButton="@id/penaltyNone"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/penaltyText"
            app:layout_constraintTop_toBottomOf="@+id/penaltyText">

            <RadioButton
                android:id="@+id/penaltyNone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/none"
                android:textSize="30sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/yellow"
                android:textSize="30sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/red"
                android:textSize="30sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/driveRatingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/drive_rating"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/penalty"
            app:layout_constraintTop_toBottomOf="@+id/penalty" />

        <RatingBar
            android:id="@+id/driveRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="@+id/driveRatingText"
            app:layout_constraintTop_toBottomOf="@+id/driveRatingText" />

        <TextView
            android:id="@+id/defenseRatingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/defense_rating"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/penalty" />

        <RatingBar
            android:id="@+id/defenseRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:scaleX="-1"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="@+id/defenseRatingText"
            app:layout_constraintTop_toBottomOf="@+id/defenseRatingText" />

        <EditText
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/comment"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/driveRating" />

        <EditText
            android:id="@+id/breakdown"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/breakdown"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/comment" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:onClick="onSubmit"
            android:text="@string/submit"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/breakdown" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>